Fixed gap between player and controls.

--- a/styles/ableplayer.css
+++ b/styles/ableplayer.css
@@ -39,7 +39,7 @@
 	border-top-right-radius: 15px;
 }*/
 .ump-video { 
-	margin-top: -0.25em;
+	margin-top: -0.75em;
 }
 .ump-video .ump-now-playing { 
 	display: none; /* not currently used for video */
